Flowmini/flowmini_v23_token_tree_bridge/examples/pass/import_repeat.flow
import "../../std/math.flow"
import "../../std/math.flow"

program import_repeat

main {
    five : int(5)
    result : int(0)
    square(five) -> result
    print result
}
